# Steam-Wrapped

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  render.yaml  requirements.txt  run.py  steam_api.py
app/: __init__.py  models.py
app/routes/: auth.py  views.py
app/static/css/: style.css
app/templates/: base.html  dashboard.html  generating.html  index.html  share.html  wrapped.html
app/templates/components/: navbar.html
app/utils/: analytics.py  steam_client.py
